--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "start:es": "ng serve --configuration es",
     "test": "ng test",
     "serve:ssr:shiro-questions": "node dist/shiro-questions/server/server.mjs"
   },
