Add WebLlm answer

--- a/angular.json
+++ b/angular.json
@@ -83,6 +83,7 @@
               "baseHref": "/en/"
             },
             "es": {
+              "baseHref": "/es/",
               "localize": [
                 "es"
               ],
