--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^18.2.1",
     "@angular/router": "^18.2.1",
     "@angular/ssr": "^18.2.1",
+    "@mlc-ai/web-llm": "^0.2.62",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
