--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "start:es": "ng serve --configuration es",
     "test": "ng test",
-    "serve:ssr:shiro-questions": "node dist/shiro-questions/proxy-server.mjs"
+    "serve:ssr:shiro-questions": "node dist/shiro-questions/proxy-server.mjs",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
